[package]
name = "canadensis_udp"
version = "0.4.1"
edition = "2018"
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"
keywords = ["uavcan", "cyphal"]
description = "A Cyphal implementation: Cyphal/UDP transport"

[dependencies]
heapless = "0.9.1"
zerocopy = "0.8.26"
fallible_collections = "0.5.1"
log = "0.4.14"
nb = "1.0.0"

[dependencies.socket2]
version = "0.6.0"
optional = true

[dependencies.canadensis_core]
version = "0.3.1"
path = "../canadensis_core"
[dependencies.canadensis_header]
version = "0.1.0"
path = "../canadensis_header"

[dev-dependencies]
simplelog = "0.12.0"

[dev-dependencies.canadensis_linux]
path = "../canadensis_linux"

[features]
default = ["std"]
std = ["socket2"]
