[package]
name = "canadensis_write_crc"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Calculates and writes UAVCAN image CRC values"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.object]
version = "0.24.0"
default-features = false
features = ["read", "std"]
