[package]
name = "canadensis_write_crc"
version = "0.1.3"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Calculates and writes Cyphal image CRC values"
keywords = ["uavcan", "uav", "can", "cyphal"]
repository = "https://github.com/samcrow/canadensis"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = "2.4.1"

[dependencies.object]
version = "0.24.0"
default-features = false
features = ["read", "std"]
