[package]
name = "prdt_compile_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { version = "1.8", features = ["zerocopy"] }
heapless = "0.7.7"
zerocopy = "0.6.0"

[dependencies.canadensis_encoding]
version = "0.2"
path = "../../canadensis_encoding"
[dependencies.canadensis_core]
version = "0.2"
path = "../../canadensis_core"

[dev-dependencies]
memoffset = "0.6.4"
